--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Open+sans:wght@300;400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
 }
-
 h1 {
     font-weight: bold;
 }
-
 .form-container {
-    background: url('./assets/desert.jpg') no-repeat 50% 40% /cover;
+    background: url('./assets/desert.jpg') no-repeat 50% 40% / cover;
     height: auto;
     @apply w-2/4 p-5 rounded-3xl
 }
@@ -24,9 +23,8 @@ h1 {
     width: 5px;
     height: 5px;
     position: absolute;
-    border-radius: 50;
+    border-radius: 50%;
     margin-left: 2px;
     margin-top: -3px;
-    @apply animate-ping bg-pink-800;
+    @apply animate-ping bg-pink-800
 }
-
